[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Pontiki.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spirit.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 40 )

[sub_resource type="ImageTexture" id=2]
size = Vector2( 50, 80 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="Pontiki" parent="." instance=ExtResource( 2 )]
position = Vector2( -91.4822, 34.2185 )

[node name="Spirit" parent="." instance=ExtResource( 3 )]

[node name="SpiritTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[node name="BreathTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="HopeTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="tween_completed" from="Camera2D/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="SpiritTimer" to="." method="_on_SpiritTimer_timeout"]
[connection signal="timeout" from="BreathTimer" to="." method="_on_BreathTimer_timeout"]
[connection signal="timeout" from="HopeTimer" to="." method="_on_HopeTimer_timeout"]
